--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
 	"name": "@joyzl/eno",
 	"version": "1.2.1",
 	"description": "Easy Node Object",
-	"main": "index.js",
+	"main": "dist/joyzl-eno.js",
+	"module": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "webpack --mode=production"
 	},
 	"repository": {
 		"type": "git",
@@ -12,6 +14,7 @@
 	},
 	"keywords": [
 		"eno",
+		"joyzl",
 		"webpack",
 		"html",
 		"json"
@@ -23,6 +26,7 @@
 	},
 	"homepage": "https://github.com/JoyLinks/eno#readme",
 	"devDependencies": {
-		"webpack": "^5.91.0"
+		"webpack": "^5.91.0",
+		"webpack-cli": "^5.1.4"
 	}
 }
